syntax = "proto3";
package rpcstream;

// RpcStreamPacket is a packet encapsulating data for a RPC stream.
message RpcStreamPacket {
  oneof body {
    // Init is the first packet in the stream.
    // Sent by the initiator.
    RpcStreamInit init = 1;
    // Ack is sent in response to Init.
    // Sent by the server.
    RpcAck ack = 2;
    // Data is the encapsulated data packet.
    bytes data = 3;
  }
}

// RpcStreamInit is the first message in a RPC stream.
message RpcStreamInit {
  // ComponentId is the identifier of the component making the request.
  string component_id = 1;
}

// RpcAck is the ack message in a RPC stream.
message RpcAck {
  // Error indicates there was some error setting up the stream.
  string error = 1;
}
